--- a/static/less/colors.less
+++ b/static/less/colors.less
@@ -1,5 +1,5 @@
-@bg-color: #fefefe;
-@fg-color: #323232;
-@darker-bg-color: #dcdcdc;
-@darker-fg-color: #000;
-@link-color: #3366CC;
+@bg-color: #000;
+@fg-color: #fff;
+@darker-bg-color: #fff;
+@darker-fg-color: #fff;
+@link-color: #fff;
