--- a/static/less/style.less
+++ b/static/less/style.less
@@ -14,7 +14,7 @@ html {
 body {
   display:flex;
   color: @fg-color;
-  background-color: @bg-color;
+  url("../background.svg");
 	font-family: 'Fira Mono', monospace;
 	font-size: 1.6em;
 	font-weight: 400;
